<resources>
    <string name="app_name">溜溜好车</string>
    <string name="company_name">浙江车位宝科技有限公司</string>
    <string name="error_msg_network">网路连接错误。</string>
    <string name="error_msg_content">服务器错误。</string>
    <string name="error_msg_upload">上传失败。</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="tv_phone">手机号</string>
    <string name="et_phone">请输入手机号</string>
    <string name="tv_confirm">验证码</string>
    <string name="et_confirm">请输入验证码</string>
    <string name="tv_pwd">密&#160;&#160;&#160;&#160;码</string>
    <string name="et_pwd">请设置密码</string>
    <string name="tv_pwd_confirm">请确认</string>
    <string name="et_pwd_confirm">请再输入密码</string>
    <string name="user_service_protocol">《用户服务协议》</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="my_city">杭州</string>
    <string name="city">当前城市</string>
    <string name="serch_car">搜索您想要的车</string>
    <string name="recommend_car">推荐车型</string>
    <string name="used_car">二手车</string>
    <string name="choose_car">自选车型</string>
    <string name="choose_none">没有搜到，换个关键词试试吧！</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="cancel">取消</string>
    <string name="call">呼叫</string>
    <string name="tv_default">默认</string>
    <string name="tv_all">全部</string>
    <string name="tv_default_list">默认排序</string>
    <string name="tv_default_down_payments_h_l">首付由高到低</string>
    <string name="tv_default_down_payments_l_h">首付由低到高</string>
    <string name="tv_default_monthly_supply_h_l">月供由高到低</string>
    <string name="tv_default_monthly_supply_l_h">月供由低到高</string>
    <string name="tv_default_car_price_h_l">车价由高到低</string>
    <string name="tv_default_car_price_l_h">车价由低到高</string>
    <string name="tv_down_payments">首付</string>
    <string name="tv_down_payments_1w">一万以内</string>
    <string name="tv_down_payments_1_2w">1-2万</string>
    <string name="tv_down_payments_2_3w">2-3万</string>
    <string name="tv_down_payments_3_4w">3-4万</string>
    <string name="tv_down_payments_4w">4万以上</string>
    <string name="tv_monthly_supply">月供</string>
    <string name="tv_monthly_supply_2k">2000以内</string>
    <string name="tv_monthly_supply_2_3k">2000-3000</string>
    <string name="tv_monthly_supply_3_4k">3000-4000</string>
    <string name="tv_monthly_supply_4_5k">4000-5000</string>
    <string name="tv_monthly_supply_5k">5000以上</string>
    <string name="tv_name">姓 &#160;&#160;&#160;名</string>
    <string name="tv_id_card">身份证</string>
    <string name="tv_bank_card">银行卡</string>
    <string name="tv_mobile_numbers">手机号</string>
    <string name="et_name">请输入您的姓名</string>
    <string name="et_id_card">请输入您的身份证号</string>
    <string name="et_bank_card">请输入您借记卡（储蓄卡）的银行卡号</string>
    <string name="et_mobile_numbers">请输入您银行卡的预留手机号</string>
    <string name="marital_status">婚姻状况&#160;&#160;&#160;&#160;</string>
    <string name="highest_education">最高学历&#160;&#160;&#160;&#160;</string>
    <string name="unit_name">单位名称&#160;&#160;&#160;&#160;</string>
    <string name="work_telephone">单位电话&#160;&#160;&#160;&#160;</string>
    <string name="work_address">单位地址&#160;&#160;&#160;&#160;</string>
    <string name="living_conditions">居住情况&#160;&#160;&#160;&#160;</string>
    <string name="home_address">家庭地址&#160;&#160;&#160;&#160;</string>
    <string name="contacts">联系人&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="contact_phone">联系人电话</string>
    <string name="relation">关系&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="upload_data">上传资料</string>
    <string name="empowerment_photo">签授权书照片</string>
    <string name="letter_of_authorization">征信授权书</string>
    <string name="handheld_identity_card">手持身份证</string>
    <string name="head_face_of_ID_card">身份证头像页</string>
    <string name="national_emblem_of_identity_card">身份证国徽页</string>
    <string name="driving_licence">驾驶证</string>
    <string name="residence_permit">居住证</string>
    <string name="property_ownership_certificate">房产证</string>
    <string name="bank_statement">银行流水</string>
    <string name="et_unit_name">请输入您的单位名称</string>
    <string name="et_work_telephone">请输入您单位的电话</string>
    <string name="et_home_address">请输入详细地址，如：街道、门牌号、楼号、室号等</string>
    <string name="et_contacts">请输入联系人姓名</string>
    <string name="et_contact_phone">请输入联系人电话</string>
    <string name="my_order">我的订单</string>
    <string name="my_repayment">我的还款</string>
    <string name="intercalate">设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="change_pwd">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="car_info">车辆详情</string>
    <string name="staging_scheme">分期方案</string>
    <string name="welfare">包购置税、送一年保险</string>
    <string name="additional_conditions">&#160;需另行支付提车服务费</string>
    <string name="view_all">查看全部分期方案</string>
    <string name="car_store">提车门店</string>
    <string name="vehicle_configuration">车辆配置</string>
    <string name="view_car_all">查看详细页面内容</string>
    <string name="car_purchase_steps">购车步骤</string>
    <string name="car_purchase_notice">购车须知</string>
    <string name="btn_purchase">主人，快把我开回家</string>
    <string name="btn_consult">咨询</string>
    <string name="order_sure">订单确认</string>
    <string name="buy_car_store">购买门店</string>
    <string name="more_car_store">查看更多门店</string>
    <string name="tv_purchaser">购买人</string>
    <string name="tv_payment_method">支付方式</string>
    <string name="tv_total">共计: </string>
    <string name="tv_ps_thr_pay">(首付、保证金、服务费)</string>
    <string name="tv_immediate_pay">立即支付</string>
    <string name="in_review">审核中</string>
    <string name="tv_early_repayment">提前还款</string>
    <string name="tv_date_payment">支付日期：</string>
    <string name="tv_period_returned">本期应还(元)</string>
    <string name="tv_repayment_periods">还款期数</string>
    <string name="tv_deadline_repayment">还款截止日期：</string>
    <string name="tv_current_state">当前状态：</string>
    <string name="tv_bond">保证金(元)：</string>
    <string name="tv_immediate_repayment">立即还款</string>
    <string name="first_payment">首付</string>
    <string name="bond">保证金</string>
    <string name="monthly_supply">月供(36月)</string>
    <string name="basic_parameters">基本参数</string>
    <string name="body_configuration">车身配置</string>
    <string name="engine_configuration">发动机配置</string>
    <string name="gearbox_configuration">变速箱配置</string>
    <string name="chassis_configuration">底盘配置</string>
    <string name="wheel_configuration">车轮配置</string>
    <string name="safety_equipment">安全装备</string>
    <string name="operation_configuration">操作配置</string>
    <string name="external_configuration">外部配置</string>
    <string name="internal_configuration">内部配置</string>
    <string name="seat_configuration">座椅配置</string>
    <string name="multimedia_configuration">多媒体配置</string>
    <string name="car_lamp_configuration">车灯配置</string>
    <string name="glass_rearview_mirror">玻璃后视镜</string>
    <string name="air_conditioning_configuration">空调配置</string>
    <string name="car_purchase_steps_title_1">选车</string>
    <string name="car_purchase_steps_title_2">审核</string>
    <string name="car_purchase_steps_title_3">签约</string>
    <string name="car_purchase_steps_title_4">提车</string>
    <string name="car_purchase_steps_content_1">选择心仪的车型及金融产品</string>
    <string name="car_purchase_steps_content_2">提交相关信息材料审核</string>
    <string name="car_purchase_steps_content_3">签订购车合同及车辆信息确认</string>
    <string name="car_purchase_steps_content_4">到相关门店提车</string>
    <string name="car_purchase_notice_title_1">车源供应</string>
    <string name="car_purchase_notice_title_2">购车所需资料</string>
    <string name="car_purchase_notice_title_3">车辆归属</string>
    <string name="car_purchase_notice_title_4">购置税</string>
    <string name="car_purchase_notice_title_5">保险明细</string>
    <string name="car_purchase_notice_title_6">逾期赔付</string>
    <string name="car_purchase_notice_title_7">上牌</string>
    <string name="car_purchase_notice_title_8">还款</string>
    <string name="car_purchase_notice_title_9">留购价</string>
    <string name="car_purchase_notice_content_1">由各大汽车厂商直接供应，车源品质有保障</string>
    <string name="car_purchase_notice_content_2">有效期内的驾驶证，线上进行资格审核</string>
    <string name="car_purchase_notice_content_3">在前四年期间，车辆及车牌所有权归属遛遛，之后可支付留购价过户</string>
    <string name="car_purchase_notice_content_4">首年费用已包含购置税，无需再支付额外费用</string>
    <string name="car_purchase_notice_content_5">送一年保险：包含交强险、第三者责任险30万。车损险、不计免赔险</string>
    <string name="car_purchase_notice_content_6">承诺您在规定时间内完成提车手续办理并通知您提车，逾期未通知则赔付规则对您赔付</string>
    <string name="car_purchase_notice_content_7">平台负责办理车辆上牌，您无需到现场和额外支付费用</string>
    <string name="car_purchase_notice_content_8">提车次月起通过绑的银行卡按时还款</string>
    <string name="car_purchase_notice_content_9">提车次月起通过绑定的银行卡按时还款</string>
    <string name="tv_audit_rejection"><font color='#FF4343'>审核拒绝</font></string>
    <string name="tv_audit_rejection_content">尊敬的小主，很抱歉，您未能通过审核！\n期待与您能再次合作的机会，么么哒！</string>
    <string name="tv_audit_rejection_btn">我马上去补全</string>
    <string name="tv_send_back"><font color='#FF44AF35'>审核退回</font></string>
    <string name="tv_send_back_content">尊敬的小主，您有以下材料需继续提交</string>
    <string name="tv_review_pass"><font color='#FF44AF35'>审核通过</font></string>
    <string name="tv_review_pass_content">恭喜你！成功获得由\n溜溜快车提供的“<font color='#FF44AF35'>溜溜产品使用权</font>”的资格</string>
    <string name="tv_review_pass_btn">扶朕起来，朕要体验</string>
    <string name="tv_failure_payment">付款失败</string>
    <string name="tv_failure_payment_content">哎呀！不知道发生了什么？\n您的付款失败了...</string>
    <string name="tv_failure_payment_btn">再试试</string>
    <string name="tv_failure_payment_back">不试了，退出</string>
    <string name="tv_network_link_failure">网络链接失败，请点击刷新重试！</string>
    <string name="tv_network_link_failure_1">无网络网络链接失败，请点击刷新重试！</string>
    <string name="tv_refresh">刷新</string>
    <string name="tv_payment_success">付款成功</string>
    <string name="tv_payment_success_content">主人，您的付款已经成功！\n去和爱车亲密接触吧！</string>
    <string name="tv_got_it">知道了</string>
    <string name="tv_rechoose_car">重新去选车</string>
    <string name="tv_in_review">主人，您提交的资料正在审核中！\n请您耐心等待，溜溜已经在火速处理了</string>
    <string name="tv_no_order">暂无订单</string>
    <string name="tv_send_back_choose_content">尊敬的小主，您需要重新选择车辆</string>
    <string name="tv_payment_coupon_title"><small>＊</small>温馨提示<small>＊</small></string>
    <string name="tv_payment_coupon_1">号为统一扣款日，请您及时充值到提交的银行卡内，以维护您良好的信用记录。\n2.由于银行代扣需要人工确认，结果或有所延迟，还款期数与截止日期的变更亦有所延迟，请您耐心等待！\n如有疑问，您可致电客服</string>
    <string name="tv_payment_coupon_tel">400-966-0081</string>
    <string name="tv_payment_coupon_2">进行咨询。祝您用车愉快！</string>
    <string name="tv_margin_cue">保证金在订单结清后\n退还至绑定银行卡</string>
    <string name="action_settings">Settings</string>
    <string name="page_tab1">Tab1</string>
    <string name="page_tab2">Tab2</string>
    <string name="page_tab3">Tab3</string>
    <string name="head_title_desc">该demo包含上滑悬浮头部，同时上下拉可刷新数据，可以左右滑动切换tab</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">释放刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新</string>
    <string name="pull_to_refresh_from_bottom_pull_label">上拉加载</string>
    <string name="pull_to_refresh_from_bottom_release_label">释放刷新</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">正在加载</string>
    <string name="title_load_dialog">发现新版本</string>
    <string name="down_load_dialog">立即更新</string>
    <string name="pass_load_dialog">不再提示</string>
    <string-array name="color_sp">
        <item>未查</item>
        <item>黑色</item>
        <item>白色</item>
        <item>银色</item>
        <item>灰色</item>
        <item>红色</item>
        <item>蓝色</item>
        <item>黄色</item>
        <item>金色</item>
        <item>其他</item>
    </string-array>
</resources>