<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/title_layout"
        layout="@layout/layout_top_blue" />

    <com.cheweibao.liuliu.ui.ScrollViewExt
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_layout">

        <LinearLayout style="@style/layout_style_mwv">

            <LinearLayout style="@style/layout_style_mwv">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textview_style_black18_20_30"
                        android:text="@string/tv_phone"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/etPhone"
                        style="@style/textview_style_black12"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/et_phone"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:textSize="12sp" />

                </LinearLayout>

                <View style="@style/a_layout_style_hline" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingRight="0dp">

                    <TextView
                        style="@style/textview_style_black18_20_30"
                        android:text="@string/tv_confirm"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/etConfirm"
                        style="@style/textview_style_black12"
                        android:layout_width="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/et_confirm"
                        android:inputType="number"
                        android:maxLength="6"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="1dip"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dip"
                        android:layout_marginTop="10dip"
                        android:background="@color/tab_nomal" />

                    <TextView
                        android:id="@+id/tvGetConfirm"
                        style="@style/textview_style_gray14"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_marginRight="3dp"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="获取验证码"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvSendedConfirm"
                    style="@style/textview_style_gray12"
                    android:layout_gravity="right"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="2dp"
                    android:text="我们将发送验证码短信到号码："
                    android:visibility="gone" />

                <View style="@style/a_layout_style_hline" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textview_style_black18_20_30"
                        android:text="@string/tv_pwd"
                        android:textSize="14sp" />

                    <com.cheweibao.liuliu.ui.MyEditText
                        android:id="@+id/etPwd"
                        style="@style/textview_style_black12"
                        android:layout_width="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="3dip"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/et_pwd"
                        android:inputType="textPassword"
                        android:maxLength="18"
                        android:textSize="12sp" />

                    <CheckBox
                        android:id="@+id/cbDisplayPassword"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:button="@drawable/selector_show_password"
                        android:checked="false" />
                </LinearLayout>

                <View style="@style/a_layout_style_hline" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        style="@style/textview_style_black18_20_30"
                        android:text="@string/tv_pwd_confirm" />

                    <EditText
                        android:id="@+id/etPwdConfirm"
                        style="@style/textview_style_black16"
                        android:layout_width="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="2dp"
                        android:background="@null"
                        android:hint="请再输入密码"
                        android:inputType="textPassword" />

                </LinearLayout>

                <View
                    style="@style/a_layout_style_hline"
                    android:visibility="gone" />

                <LinearLayout
                    style="@style/layout_style_mwv"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_user_service_protocol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dip"
                        android:layout_marginRight="5dip"
                        android:button="@drawable/selector_selected"
                        android:checked="true"
                        android:paddingBottom="15dip"
                        android:paddingTop="15dip" />

                    <TextView
                        style="@style/textview_style_black"
                        android:text="我已同意并阅读"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/user_service_protocol"
                        style="@style/textview_style_green"
                        android:autoLink="all"
                        android:text="@string/user_service_protocol"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/tvNext"
                style="@style/textview_style_white18"
                android:layout_width="256dp"
                android:layout_height="50dip"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_blue_3_br"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/register" />

        </LinearLayout>

    </com.cheweibao.liuliu.ui.ScrollViewExt>

</RelativeLayout>
