<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <LinearLayout
        android:id="@+id/ll_dialog_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_dialog_load"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/title_load_dialog"
            android:textColor="#38ADFF"
            android:textSize="16sp" />

        <com.cheweibao.liuliu.ui.ScrollViewExt
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:layout_weight="1"
            android:scrollbarStyle="outsideInset">

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="提示消息" />
        </com.cheweibao.liuliu.ui.ScrollViewExt>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dip"
            android:orientation="vertical">

            <Button
                android:id="@+id/yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:background="@drawable/btn_blue_grey_br"
                android:gravity="center"
                android:padding="10dip"
                android:singleLine="true"
                android:text="@string/down_load_dialog"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:padding="10dip"
                android:singleLine="true"
                android:text="@string/pass_load_dialog"
                android:textColor="#7D7D7D"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/no"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_below="@+id/ll_dialog_load"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dip"
        android:padding="10dip"
        android:src="@drawable/ic_login_close" />

</RelativeLayout>